Quick Installer, plus other bundle changes.  There are now 3 versions of the installer, a core one; one with OOo; and one with OOo and JDK.  If the installer finds an appropriate JDK it will not try and install or upgrade it (but the JDK installer will be unpacked if included).  Still more work to do on MySQL config, but Derby config should work well.  The installer includes WCM as well as sample AMPs that are applied if the Samples option is selected.
Broke out some build properties into a separate file to ensure correct sequence of loading and variable substitution - primarily for distribution bundles.

Minor changes to .bat files - now identical across zip and installer bundles.

git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@9999 7033f55c-6c29-4ad8-afba-765cb616e738